src/main/java/com/example/customerinformationsystem/error/CustomerNotFoundException.java
package com.example.customerinformationsystem.error;

public class CustomerNotFoundException {
}
